--- a/package.json
+++ b/package.json
@@ -3,17 +3,33 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
+    "@reduxjs/toolkit": "^1.7.1",
+    "@types/react-redux": "^7.1.22",
     "next": "latest",
+    "next-redux-wrapper": "^7.0.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "sass": "^1.48.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@storybook/addon-actions": "^6.4.12",
+    "@storybook/addon-essentials": "^6.4.12",
+    "@storybook/addon-links": "^6.4.12",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/react": "^6.4.12",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
+    "babel-loader": "^8.2.3",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
